fix: fixed overlapping bg-image

--- a/frontend/src/pages/ChoiceThemePage/choice-theme-page.module.scss
+++ b/frontend/src/pages/ChoiceThemePage/choice-theme-page.module.scss
@@ -45,6 +45,7 @@
 		width: 100%;
 		height: 100%;
 
+		pointer-events: none;
 		position: absolute;
 		background-position: bottom;
 		top: 0%;
